--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>JavaScript30</title>
+  <style>
+    a {
+      display: block;
+    }
+  </style>
 </head>
 <body>
 
-
+  <a href="sections/section01/index01.html" target="_blank">JavaScript Drum Kit</a>
 
 </body>
 </html>
