02 - CSS + JS Clock

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
 <body>
 
   <a href="sections/section01/index01.html" target="_blank">JavaScript Drum Kit</a>
+  <a href="sections/section02/index02.html" target="_blank">CSS + JS Clock</a>
+
+
 
 </body>
 </html>
