03 - Playing with CSS Variables and JS

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
 
   <a href="sections/section01/index01.html" target="_blank">JavaScript Drum Kit</a>
   <a href="sections/section02/index02.html" target="_blank">CSS + JS Clock</a>
+  <a href="sections/section03/index03.html" target="_blank">Playing with CSS Variables and JS</a>
 
 
 
