--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   <a href="sections/section02/index02.html" target="_blank">CSS + JS Clock</a>
   <a href="sections/section03/index03.html" target="_blank">Playing with CSS Variables and JS</a>
   <a href="sections/section04/index04.html" target="_blank">Array Cardio Day 1</a>
+  <a href="sections/section05/index05.html" target="_blank">Flex Panel Gallery</a>
 
 
 
