06 - Ajax Type Ahead

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   <a href="sections/section03/index03.html" target="_blank">Playing with CSS Variables and JS</a>
   <a href="sections/section04/index04.html" target="_blank">Array Cardio Day 1</a>
   <a href="sections/section05/index05.html" target="_blank">Flex Panel Gallery</a>
+  <a href="sections/section06/index06.html" target="_blank">Ajax Type Ahead</a>
 
 
 
