07 - Array Cardio Day 2

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
   <a href="sections/section04/index04.html" target="_blank">Array Cardio Day 1</a>
   <a href="sections/section05/index05.html" target="_blank">Flex Panel Gallery</a>
   <a href="sections/section06/index06.html" target="_blank">Ajax Type Ahead</a>
+  <a href="sections/section07/index07.html" target="_blank">Array Cardio Day 2</a>
 
 
 
