08 - Fun with HTML5 Canvas

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
   <a href="sections/section05/index05.html" target="_blank">Flex Panel Gallery</a>
   <a href="sections/section06/index06.html" target="_blank">Ajax Type Ahead</a>
   <a href="sections/section07/index07.html" target="_blank">Array Cardio Day 2</a>
+  <a href="sections/section08/index08.html" target="_blank">Fun with HTML5 Canvas</a>
 
 
 
