09 - 14 Must Know Dev Tools Tricks

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
   <a href="sections/section06/index06.html" target="_blank">Ajax Type Ahead</a>
   <a href="sections/section07/index07.html" target="_blank">Array Cardio Day 2</a>
   <a href="sections/section08/index08.html" target="_blank">Fun with HTML5 Canvas</a>
+  <a href="sections/section09/index09.html" target="_blank">14 Must Know Dev Tools Tricks</a>
 
 
 
