10 - Hold Shift to Check Multiple Checkboxes

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
   <a href="sections/section07/index07.html" target="_blank">Array Cardio Day 2</a>
   <a href="sections/section08/index08.html" target="_blank">Fun with HTML5 Canvas</a>
   <a href="sections/section09/index09.html" target="_blank">14 Must Know Dev Tools Tricks</a>
+  <a href="sections/section10/index10.html" target="_blank">Hold Shift to Check Multiple Checkboxes</a>
 
 
 
