12 - Key Sequence Detection (KONAMI CODE)

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
   <a href="sections/section09/index09.html" target="_blank">14 Must Know Dev Tools Tricks</a>
   <a href="sections/section10/index10.html" target="_blank">Hold Shift to Check Multiple Checkboxes</a>
   <a href="sections/section11/index11.html" target="_blank">Custom HTML5 Video Player</a>
+  <a href="sections/section12/index12.html" target="_blank">Key Sequence Detection (KONAMI CODE)</a>
 
 
 
