13 - Slide In on Scroll

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
   <a href="sections/section10/index10.html" target="_blank">Hold Shift to Check Multiple Checkboxes</a>
   <a href="sections/section11/index11.html" target="_blank">Custom HTML5 Video Player</a>
   <a href="sections/section12/index12.html" target="_blank">Key Sequence Detection (KONAMI CODE)</a>
+  <a href="sections/section13/index13.html" target="_blank">Slide In on Scroll</a>
 
 
 
